# python-project-52

./: .env.example  .gitignore  .notes.txt  Makefile  README.md  build.sh  env  pyproject.toml  Менеджер задач Hexlet.html
.github/workflows/: main.yml
hexlet-code/task_manager/: admin.py  asgi.py  filters.py  forms.py  models.py  settings.py  tests.py  urls.py  views.py
hexlet-code/task_manager/labels/: forms.py  models.py  urls.py  views.py
hexlet-code/task_manager/migrations/: 0001_initial.py  0003_remove_task_label_task_labels.py
hexlet-code/task_manager/statuses/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
hexlet-code/task_manager/templatetags/: custom_tags.py
hexlet-code/task_manager/users/: admin.py  models.py  tests.py  urls.py  views.py
hexlet-code/templates/: create.html  home.html  index.html  index_labels.html  index_statuses.html  index_tasks.html  index_users.html  layout.html  login.html  search.html  update.html
task_manager/: Makefile  admin.py  filters.py  forms.py  settings.py  tests.py  urls.py  views.py  wsgi.py
task_manager/common/: messages.py  views.py
task_manager/labels/: admin.py  forms.py  mixins.py  models.py  test_labels.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0002_rename_label_label_name.py
task_manager/migrations/: 0001_initial.py  0002_initial.py  0004_alter_task_creator_alter_task_responsible.py  0005_delete_task.py
task_manager/statuses/: forms.py  mixins.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0002_rename_status_status_name.py
task_manager/tasks/: admin.py  filters.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
task_manager/templates/: Makefile  create.html  delete.html  home.html  index.html  index_tasks.html  layout.html  login.html  search.html  test.html  update.html
task_manager/templatetags/: custom_tags.py
task_manager/users/: forms.py  middleware.py  mixins.py  models.py  tests.py  urls.py  views.py
(+32 files in other folders)
