[project]
name = "hexlet-code"
version = "0.1.0"
description = "The task-management web-service. Author: Safar Galimzianov, safargalimzianov@protonmail.com"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dj-database-url>=2.3.0",
    "django-filter>=25.1",
    "django>=5.1.5",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "whitenoise[brotli]>=6.8.2",
    "rollbar>=1.2.0",
    "pytest>=8.3.4",
]

[dependency-groups]
dev = [
    "ruff>=0.9.4",
]
