[project]
name = "hexlet-code"
version = "0.1.0"
description = "The task-management web-service. Author: Safar Galimzianov, safargalimzianov@protonmail.com"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dj-database-url>=2.3.0",
    "django-filter>=25.1",
    "django>=5.1.5",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "whitenoise[brotli]>=6.8.2",
    "rollbar>=1.2.0",
]

[dependency-groups]
dev = [
    "pytest-django>=4.10.0",
    "pytest>=8.3.4",
    "ruff>=0.9.4",
    "pytest-cov>=6.0.0",
]

# I do not know why these are needed
# But hexlet tests do not work without them
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["task_manager"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "task_manager.settings"
testpaths = [
    "task_manager/labels",
    "task_manager/statuses",
    "task_manager/tasks",
    "task_manager/users",
]
python_files = "tests.py"